# ChangeLog for media-libs/phonon
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/phonon/ChangeLog,v 1.3 2011/03/27 12:35:19 dilfridge Exp $

  27 Mar 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  phonon-4.4.4.ebuild, phonon-9999.ebuild:
  Adapt phonon-gstreamer dependency for package move

  26 Mar 2011; Tomáš Chvátal <scarabeus@gentoo.org> phonon-9999.ebuild:
  Use eapi4 for phonon live version. With REQUIRED_USE it drops need for the
  pkg_setup die.

  26 Mar 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +files/phonon-4.4-qt7.patch, +phonon-4.4.2.ebuild, +phonon-4.4.3.ebuild,
  +phonon-4.4.4.ebuild, +phonon-9999.ebuild, +metadata.xml:
  Moved phonon to new category media-libs

  26 Feb 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  phonon-4.4.4.ebuild, phonon-9999.ebuild:
  Added dependency on qt-test, bug 353054

  13 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -phonon-4.3.50_pre20090520.ebuild, -phonon-4.3.80-r1.ebuild:
  old

*phonon-9999 (23 Jan 2011)
*phonon-4.4.4 (23 Jan 2011)

  23 Jan 2011; Maciej Mrozowski <reavertm@gentoo.org> +phonon-4.4.4.ebuild,
  +phonon-9999.ebuild, metadata.xml:
  Version bump 4.4.4 (phonon split), add live ebuild from kde overlay

  06 Jan 2011; Raúl Porcel <armin76@gentoo.org> phonon-4.4.2.ebuild:
  ia64 stable wrt #329847

  04 Jan 2011; Michael Weber <xmw@gentoo.org> phonon-4.4.2.ebuild:
  sparc stable (bug 329847)

  09 Dec 2010; Markus Meier <maekke@gentoo.org> phonon-4.4.2.ebuild:
  arm stable, bug #329847

  26 Nov 2010; Jeroen Roovers <jer@gentoo.org> phonon-4.4.2.ebuild:
  Stable for HPPA (bug #329847).

*phonon-4.4.3 (25 Nov 2010)

  25 Nov 2010; Maciej Mrozowski <reavertm@gentoo.org> +phonon-4.4.3.ebuild:
  Version bump

  19 Sep 2010; Tobias Klausmann <klausman@gentoo.org> phonon-4.4.2.ebuild:
  Stable on alpha, bug #329847

  10 Aug 2010; Tomáš Chvátal <scarabeus@gentoo.org>