@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/phonon/phonon-9999.ebuild,v 1.3 2011/03/27 12:35:19 dilfridge Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/phonon/phonon-9999.ebuild,v 1.4 2011/03/28 23:01:11 dilfridge Exp $
 
 EAPI=4
 
@@ -32,7 +32,7 @@ COMMON_DEPEND="
 # waveout? ( media-sound/phonon-waveout )
 PDEPEND="
 	gstreamer? ( media-libs/phonon-gstreamer )
-	vlc? ( >=media-sound/phonon-vlc-0.3.2 )
+	vlc? ( >=media-libs/phonon-vlc-0.3.2 )
 	xine? ( >=media-sound/phonon-xine-0.4.4 )
 "
 RDEPEND="${COMMON_DEPEND}
