@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/phonon
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/phonon/ChangeLog,v 1.3 2011/03/27 12:35:19 dilfridge Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/phonon/ChangeLog,v 1.4 2011/03/28 23:01:11 dilfridge Exp $
+
+  28 Mar 2011; Andreas K. Huettel <dilfridge@gentoo.org>
+  phonon-4.4.4.ebuild, phonon-9999.ebuild:
+  Adapt phonon-vlc dependency for package move
 
   27 Mar 2011; Andreas K. Huettel <dilfridge@gentoo.org>
   phonon-4.4.4.ebuild, phonon-9999.ebuild:
